--- a/src/styles/sub.css
+++ b/src/styles/sub.css
@@ -47,7 +47,7 @@
     background-color: #fff;
     border: 1px solid #e6e6e6;
     border-radius: var(--radius-block);
-    margin-bottom: 1.234rem;
+    margin-bottom:3.6rem;
     box-shadow: .078vw .078vw .586vw #7d84921a;
 }
 @media screen and (max-width: 479px) {
@@ -65,6 +65,10 @@
      
         padding: 1rem !important;
     }
+    
+.section_about-product {
+    padding-top:30vw !important;
+}
   }
   
 
@@ -108,7 +112,7 @@
     border-radius: 5px;
     z-index: -1;
 }
-..swiper-slide {
+.swiper-slide {
     position: relative;
 }
 .tag_sub_slider {
@@ -121,9 +125,13 @@
     height: -moz-fit-content;
     height: fit-content;
     padding: .5vw 1.5vw;
-    background-color: #fff;
+    background-color: #ffffffbe;
     color: black;
     border-radius: var(--radius-block);
     font-size: .72rem;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 1
+}
+
+.section_about-product {
+    padding-top:5rem;
 }
