--- a/src/styles/sub.css
+++ b/src/styles/sub.css
@@ -135,3 +135,13 @@
 .section_about-product {
     padding-top:5rem;
 }
+
+.submitScene {
+    position: fixed !important;
+    z-index: 9999;
+    top:0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.2);
+    z-index: 9995;
+}
