--- a/src/styles/sub.css
+++ b/src/styles/sub.css
@@ -94,8 +94,10 @@
 .button-item-service {
     position: absolute;
     bottom: 2.5vw;
-    right: 2.5vw;
+    right:  2.5vw;
     color: #8a8a8a;
+    width: fit-content;
+    height: fit-content;
     font-style: italic;
     padding: .313vw .781vw;
     border-radius: var(--radius-button);
@@ -116,6 +118,7 @@
     pointer-events: none;
 }
 .isItemServicesInfo {
+    position: relative;
     max-width:50%;
     padding: 2.5vw;
     display: flex;
@@ -240,7 +243,8 @@ text-align: center;
 }
 
 @media (max-width:469px) {
-    .imgItemServiceRelated .swiper-slide {
+    .button-item-service {
+        top: 7vw !important;
        
     }
 }
