--- a/src/styles/sub.css
+++ b/src/styles/sub.css
@@ -37,18 +37,16 @@
 }
 .titleServiceHead {
     cursor: pointer;
-    justify-content: space-between;
-    align-items: center;
-   
-    display: flex;
-    max-width: 72%;
+    text-align: center;
+    width: 72%;
+    margin: 0  auto;
 }
 .titleServiceBody{
    
 }
 .isItemServices {
     position: relative;
-    height:30vw;
+    height:20vw;
     overflow: hidden;
     display: flex;
     flex-direction: row;
@@ -92,9 +90,8 @@
   
 }
 .button-item-service {
-    position: absolute;
-    bottom: 2.5vw;
-    right:  2.5vw;
+    position: relative;
+    margin: 0 auto;
     color: #8a8a8a;
     width: fit-content;
     height: fit-content;
@@ -119,7 +116,7 @@
 }
 .isItemServicesInfo {
     position: relative;
-    max-width:50%;
+   width:50%;
     padding: 2.5vw;
     display: flex;
     flex-direction: column;
@@ -243,8 +240,12 @@ text-align: center;
 }
 
 @media (max-width:469px) {
-    .button-item-service {
-        top: 7vw !important;
+    .isItemServicesInfo {
+        width: 100% !important;
+    }
+    .titleServiceHead {
+        width: 100% !important;
+        text-align: left !important;
        
     }
 }
